isar_plus/test/errors/class/private.dart
// must be public

import 'package:isar_plus/isar_plus.dart';

@collection
// ignore: unused_element
class _Model {
  late int id;
}
